# NerGuard

./: .gitignore  LICENSE  PII_detector.ipynb  README.md  constants.py  data_processing.py  datasets_combination.py  encoder.py  fallback_llm.py  notes.md  padding.py  pyproject.toml  rc_scenario.py  run_benchmark.sh  run_local_benchmark.sh  test.py  tester.ipynb  tokenizer.py  training.py  training_log_v2.txt
alignments/: default.json
diagrams/: convert.sh  convert_all.sh  convert_diagrams.py  mermaid-config.json
diagrams/paper/: fig1_system_architecture.mmd  fig2_inference_pipeline.mmd  fig3_selective_routing.mmd  fig4_threshold_optimization.mmd  fig5_model_architecture.mmd
diagrams/process_diagrams/: 01_system_architecture.mmd  02_inference_pipeline.mmd  03_llm_routing_system.mmd  04_evaluation_system.mmd  05_optimization_system.mmd  06_data_flow.mmd
diagrams/results/: 01_performance_comparison.mmd  02_per_entity_metrics.mmd  03_llm_impact.mmd  04_multilingual.mmd  05_routing_flow.mmd  06_ablation_study.mmd  07_llm_providers.mmd  08_optimization_tradeoff.mmd  09_quantization_impact.mmd  10_language_families.mmd  11_routing_statistics.mmd  12_validation_metrics.mmd  13_cost_analysis.mmd  14_prompt_comparison.mmd  15_confidence_distribution.mmd  16_entity_support.mmd  17_llm_accuracy.mmd  18_latency_comparison.mmd  19_error_breakdown.mmd  20_selective_routing_comparison.mmd  21_threshold_sensitivity.mmd  22_model_size_comparison.mmd  23_intervention_rate.mmd  24_entity_hierarchy.mmd  25_experiment_timeline.mmd  26_bio_label_distribution.mmd  27_pipeline_metrics.mmd  28_model_comparison_radar.mmd  29_decision_flow.mmd  30_llm_benefit_analysis.mmd  31_entity_routable_blocked.mmd  32_dataset_composition.mmd  33_uncertainty_measures.mmd  34_performance_table.mmd  35_evaluation_sequence.mmd  36_optimization_sequence.mmd  37_state_diagram.mmd  38_class_diagram.mmd  39_gantt_experiments.mmd  40_er_diagram.mmd
evaluation_results/: metrics_summary.csv  report.txt
experiments/: significance_results.json
experiments/ablation_nvidia-pii_1000samples/: ablation_summary.json
experiments/combined_1000samples_2026-03-04/: dslim_bert-base-ner_nvidia-pii  nerguard_base_nvidia-pii  nerguard_hybrid_gpt-4o_nvidia-pii  nerguard_hybrid_v2_deepseek-r1:14b_nvidia-pii  nerguard_hybrid_v2_gpt-4o_nvidia-pii  nerguard_hybrid_v2_gpt-oss:20b_nvidia-pii  nerguard_hybrid_v2_llama3.1:8b_nvidia-pii  nerguard_hybrid_v2_mistral-nemo:12b_nvidia-pii  nerguard_hybrid_v2_phi4:14b_nvidia-pii  nerguard_hybrid_v2_qwen2.5:14b_nvidia-pii  nerguard_hybrid_v2_qwen2.5:7b_nvidia-pii  piiranha_nvidia-pii  presidio_nvidia-pii  spacy_en_core_web_trf_nvidia-pii
notebooks/: EDA.ipynb  EDA_nvidia.ipynb  PII_detector.ipynb  ai4privacy_pii-masking-500k.ipynb  tester.ipynb
notes/: benchmark_local_models_2026-03-03.md  plot_analysis_2026-03-04.md  routing_observations.md  routing_strategy.md  span_routing_2026-03-02.md  system_improvements_2026-03-02.md
past_work/: data_processing.py  datasets_combination.py  pii_detection_results.json  test.py
plots/ablation_study/: ablation_log.txt  ablation_report.txt  ablation_results.json  ablation_summary.md
plots/evaluation_comparison/: comparison_report.txt  log.txt
plots/evaluation_no_selective/: comparison_report.txt
plots/evaluation_nvidia/: evaluation_report.txt  log.txt  metrics.json
plots/evaluation_results/: log.txt  log_v7.txt  log_v8.txt  metrics_summary.csv
plots/evaluation_selective/: comparison_report.txt
plots/evaluation_selective_v2/: comparison_report.txt
plots/hybrid_selective_test/: comparison_report.txt
plots/llm_router/: experiment_report.txt  failure_analysis.txt  results.json
plots/multi_seed_test/: multi_seed_report.txt  multi_seed_results.json
plots/multilingual_results/: multilingual_report.txt  multilingual_results.json
plots/multilingual_test/: multilingual_report.txt  multilingual_results.json
plots/optimization_plots/: log.txt  optimal_params.txt  results.json  results_table.tex
plots/quantization_plots/: config.json  log.txt  report.txt  tokenizer_config.json
plots/validation_results/: log.txt  report.txt
results/: evaluation_results.json  validation_20260302_100206_log.txt
results/validation_20260301_181738/: comparison.txt
results/validation_20260301_191818/: comparison.txt
results/validation_20260302_100206/: comparison_report.txt  metrics_summary.json
results/validation_all_entities_llama/: comparison_report.txt  metrics_summary.json
results/validation_optimal_llama/: comparison_report.txt  metrics_summary.json
results/validation_spanrouting_20260302_103549/: comparison_report.txt  metrics_summary.json
scripts/: ablation_study.sh  benchmark.sh  demo.sh  evaluate.sh  evaluate_multilingual.sh  evaluate_nvidia.sh  inference.sh  setup.sh  train.sh  validate_nvidia_full.sh
src/: __init__.py  quantize.py
src/analysis/: significance.py
src/benchmark/: __init__.py  alignment.py  compare_local_vs_openai.py  config.py  label_protocol.py  metrics.py  plots.py  report.py  runner.py
src/comparison/: benchmark_comparison.py  benchmark_datasets.py  benchmark_datasets_diff_models.py  visual.py
src/components/: encoder.py
src/core/: __init__.py  base_prompt.py  base_validator.py  constants.py  label_mapper.py  metrics.py  model_loader.py  route_config.py
src/inference/: prompts.py  (+6 more)
wandb/: latest-run
(+405 files in other folders)
