[project]
name = "nerguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.3.1",
    "accelerate>=1.12.0",
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.13.3",
    "aiosignal>=1.4.0",
    "anyio>=4.12.1",
    "argon2-cffi>=25.1.0",
    "argon2-cffi-bindings>=25.1.0",
    "arrow>=1.4.0",
    "asttokens>=3.0.1",
    "astunparse>=1.6.3",
    "async-lru>=2.0.5",
    "attrs>=25.4.0",
    "babel>=2.17.0",
    "beautifulsoup4>=4.14.3",
    "bleach>=6.3.0",
    "comm>=0.2.3",
    "datasets>=4.5.0",
    "debugpy>=1.8.19",
    "decorator>=5.2.1",
    "defusedxml>=0.7.1",
    "dill>=0.4.0",
    "distro>=1.9.0",
    "evaluate>=0.4.6",
    "executing>=2.2.1",
    "fastjsonschema>=2.21.2",
    "flair>=0.15.1",
    "fqdn>=1.5.1",
    "frozenlist>=1.8.0",
    "gast>=0.7.0",
    "git-filter-repo>=2.47.0",
    "gitdb>=4.0.12",
    "gitpython>=3.1.46",
    "gliner>=0.2.24",
    "google-pasta>=0.2.0",
    "grpcio>=1.76.0",
    "h11>=0.16.0",
    "h5py>=3.15.1",
    "hf>=1.1.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "huggingface>=0.0.1",
    "iniconfig>=2.3.0",
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "ipython-pygments-lexers>=1.1.1",
    "ipywidgets>=8.1.8",
    "isoduration>=20.11.0",
    "jedi>=0.19.2",
    "jiter>=0.12.0",
    "json5>=0.13.0",
    "jsonpointer>=3.0.0",
    "jsonschema>=4.26.0",
    "jsonschema-specifications>=2025.9.1",
    "jupyter>=1.1.1",
    "jupyter-client>=8.8.0",
    "jupyter-console>=6.6.3",
    "jupyter-core>=5.9.1",
    "jupyter-events>=0.12.0",
    "jupyter-lsp>=2.3.0",
    "jupyter-server>=2.17.0",
    "jupyter-server-terminals>=0.5.4",
    "jupyterlab>=4.5.2",
    "jupyterlab-pygments>=0.3.0",
    "jupyterlab-server>=2.28.0",
    "jupyterlab-widgets>=3.0.16",
    "keras>=3.13.1",
    "lark>=1.3.1",
    "libclang>=18.1.1",
    "markdown>=3.10",
    "markdown-it-py>=4.0.0",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "mdurl>=0.1.2",
    "mistune>=3.2.0",
    "ml-dtypes>=0.5.4",
    "multidict>=6.7.0",
    "multiprocess>=0.70.18",
    "namex>=0.1.0",
    "nbclient>=0.10.4",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "nest-asyncio>=1.6.0",
    "notebook>=7.5.2",
    "notebook-shim>=0.2.4",
    "ollama>=0.6.1",
    "onnxruntime>=1.23.2",
    "openai>=2.15.0",
    "opt-einsum>=3.4.0",
    "optimum[onnxruntime]>=2.1.0",
    "optree>=0.18.0",
    "overrides>=7.7.0",
    "pandas>=2.3.3",
    "pandocfilters>=1.5.1",
    "parso>=0.8.5",
    "pexpect>=4.9.0",
    "pip>=25.3",
    "platformdirs>=4.5.1",
    "pluggy>=1.6.0",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "prometheus-client>=0.24.1",
    "prompt-toolkit>=3.0.52",
    "propcache>=0.4.1",
    "psutil>=7.2.1",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pyarrow>=22.0.0",
    "pygments>=2.19.2",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "pyzmq>=27.1.0",
    "referencing>=0.37.0",
    "rfc3339-validator>=0.1.4",
    "rfc3986-validator>=0.1.1",
    "rfc3987-syntax>=1.1.0",
    "rich>=14.2.0",
    "rpds-py>=0.30.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "send2trash>=2.1.0",
    "sentry-sdk>=2.49.0",
    "seqeval>=1.2.2",
    "smmap>=5.0.2",
    "sniffio>=1.3.1",
    "soupsieve>=2.8.1",
    "spacy>=3.8.11",
    "stack-data>=0.6.3",
    "tabulate>=0.9.0",
    "tensorboard>=2.20.0",
    "tensorboard-data-server>=0.7.2",
    "tensorflow>=2.20.0",
    "termcolor>=3.3.0",
    "terminado>=0.18.1",
    "tf-keras>=2.20.1",
    "tiktoken>=0.12.0",
    "tinycss2>=1.4.0",
    "torch>=2.9.1",
    "tornado>=6.5.4",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "transformers>=4.57.5",
    "types-python-dateutil>=2.9.0.20251115",
    "uri-template>=1.3.0",
    "wandb>=0.24.0",
    "wcwidth>=0.2.14",
    "webcolors>=25.10.0",
    "webencodings>=0.5.1",
    "websocket-client>=1.9.0",
    "werkzeug>=3.1.5",
    "wheel>=0.45.1",
    "widgetsnbextension>=4.0.15",
    "xxhash>=3.6.0",
    "yarl>=1.22.0",
]
