[project]
name = "nerguard"
version = "1.0.0"
description = "Hybrid PII detection with entropy-based selective LLM routing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Gabriele Durante"}
]

dependencies = [
    # Deep learning
    "torch>=2.0",
    "transformers>=4.40",
    "accelerate>=0.27",
    "datasets>=2.18",
    "evaluate>=0.4",
    "seqeval>=1.2",

    # Scientific computing
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "scipy>=1.12",

    # LLM routing
    "openai>=1.12",
    "ollama>=0.1",

    # Quantization
    "onnxruntime>=1.17",
    "optimum[onnxruntime]>=1.17",

    # Visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",

    # Utilities
    "tqdm>=4.66",
    "python-dotenv>=1.0",

    # Experiment tracking
    "wandb>=0.16",

    # Benchmark competitors
    "gliner>=0.2",
    "presidio-analyzer>=2.2",
    "spacy>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "ipython>=8.0",
    "debugpy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
